# marketxx

./: CMakeLists.txt  README.md  design.md  hello.c
include/: item.h  menu.h  operation.h  order.h  test.h  user.h  utils.h
include/tools/: color.h  info.h  string.h
src/: item.cxx  main.cxx  menu.cxx  operation.cxx  order.cxx  user.cxx  utils.cxx
src/dataset/: item  item_desc  order  user
src/img/: admin  customer  help  item_head  main_menu  order_head  user  user_head  welcome
src/tools/: color.cxx  info.cxx  string.cxx
test/: example.c  test.cxx
